--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.13.2",
     "cookie": "^1.1.1",
     "formik": "^2.4.9",
+    "modern-normalize": "^3.0.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.0.6",
     "yup": "^1.7.1",
